# frameplot

./: .gitignore  README.ko.md  README.md  pyproject.toml
.github/workflows/: workflow.yml
examples/: edge_join.py  hero_new.py  hero_pipeline.py  quickstart.py  sar_backbone_example.py  theme_heroes.py
src/frameplot/: __init__.py  api.py  model.py  theme.py
src/frameplot/layout/: __init__.py  order.py  place.py  rank.py  route.py  scc.py  text.py  types.py  validate.py
src/frameplot/render/: __init__.py  png.py  svg.py
test/: draw_flowchart.py  generate_pipeline.py
tests/: test_rendering.py
